--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
   "routes": [
     { "handle": "filesystem" },
     {
-      "src": "/api/.*",
-      "dest": "/api/index.js"
+      "src": "/.*",
+      "dest": "/index.js"
     },
     {
       "src": "/(.*)",
